slight Dark Mode fixes for WeaponModal

--- a/components/WeaponModal/index.scss
+++ b/components/WeaponModal/index.scss
@@ -30,15 +30,6 @@
         color: $grey-70;
         cursor: not-allowed;
       }
-
-      &:not(.btn-disabled) {
-        background: $grey-90;
-        color: $grey-50;
-
-        &:hover {
-          background: $grey-80;
-        }
-      }
     }
   }
 }
