--- a/components/WeaponUnit/index.scss
+++ b/components/WeaponUnit/index.scss
@@ -76,7 +76,6 @@
   }
 
   .Button {
-    background: $grey-100;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.14);
     display: none;
     position: absolute;
